# LitAgent

./: .env.example  .gitignore  README.md  SEARCH_TUNING.md  pyproject.toml  start_backend.py
api/: main.py
cli/: main.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  test-app.html  tsconfig.json  vite.config.js  vite.config.ts
outputs/: papers_artificial-intelligence-in-healthcare.csv  papers_artificial-intelligence.csv  papers_foundation-models-for-single-cell-annotation.csv  papers_machine-learning-healthcare.csv  papers_machine-learning-in-healthcare.csv  papers_machine-learning.csv  papers_zero-shot-cell-type-annotation-with-geneformer-foundation-model-langcell.csv  papers_zero-shot-cell-type-annotation-with-geneformer-foundation-model.csv  papers_zero-shot-cell-type-annotation-with-geneformer-model.csv  papers_zero-shot-cell-type-annotation-with-geneformer.csv  papers_zero-shot.csv  papers_zeroshot.csv  review_artificial-intelligence-in-healthcare.json  review_artificial-intelligence-in-healthcare.md  review_artificial-intelligence.json  review_artificial-intelligence.md  review_foundation-models-for-single-cell-annotation.json  review_foundation-models-for-single-cell-annotation.md  review_geneformer.json  review_machine-learning-healthcare.json  review_machine-learning-healthcare.md  review_machine-learning-in-healthcare.json  review_machine-learning-in-healthcare.md  review_machine-learning.json  review_machine-learning.md  review_zero-shot-cell-type-annotation-with-geneformer-foundation-model-langcell.json  review_zero-shot-cell-type-annotation-with-geneformer-foundation-model-langcell.md  review_zero-shot-cell-type-annotation-with-geneformer-foundation-model.json  review_zero-shot.json  (+10 more)
(+65 files in other folders)
